
Changes in version 0.1-13 (??-10-2014)
======================================

- It is possible to sort the design table (e.g. by efficiency or number of sequences).

- 

Changes in version 0.1-12 (25-09-2014)
======================================

- Fixed portable C++ code problem: "Other macros, typically upper-case,
  may be defined by the compiler or system headers and can cause problems. 
  The most common issue involves the names of the Intel CPU registers such
  as CS, DS and SS defined on i586/x64 Solaris in <sys/regset.h> and often 
  included indirectly by <stdlib.h> and other core headers."

- GUI threads analysing the available packages by calling R are stopped until 
  the call to show the GUI has been returned back to R. 
  (Before you could notice "stack imbalance" warnings and complete crashes of R.)

- User is asked whether files should be saved, if new designs were created.

- Less logging output in the R console.

- Removed a few designs that were only building blocks for crossover designs from
  the list of crossover designs.

- Clean-up


Features in version 0.1-11 (05-09-2014)
=======================================

- Solarix x64 support.

Features in version 0.1-10 (27-08-2014)
=======================================

- First version of package on CRAN. 

- More than two hundred cross-over design from literature.

- Search algorithm to find efficient cross-over designs.

- Graphical user interface (GUI) to find/generate appropriate designs.

 666 files changed, 30746 insertions(+), 2494 deletions(-)